@@ -13,3 +13,12 @@ banana: 139
 orange: 139
 grape: 139
 ```
+
+Example of providing too many or no files
+```
+$ java -jar --enable-preview countWords.jar 
+No file provided or too many files provided
+------------------------------------------
+$ java -jar --enable-preview countWords.jar words.txt words.txt 
+No file provided or too many files provided
+```
